Fix overspill of league rows.

--- a/play/app/assets/stylesheets/fixtures.less
+++ b/play/app/assets/stylesheets/fixtures.less
@@ -160,6 +160,9 @@
 .fixtureTableWrapper .tableRow .tableCell.gd { width: 5%; border-left: 1px solid #dbdbdb; }
 .fixtureTableWrapper .tableRow .tableCell.pt { width: 5%; }
 
+.fixtureTableWrapper .infos.row { margin-left: 0; margin-right: 0; }
+.fixtureTableWrapper .links.row { margin-left: 0; margin-right: 0; }
+
 /* md or less, tablet */
 @media (max-width: 977px) {
     .nextMatchContainer { left: 0; width: 100%; margin-left: 0; }
